# extensions

./: .gitignore  AGENTS.md  README.md  analysis_results.md  index.d.ts  index.js  package.json  pyproject.toml  release-please-config.json
.agents/skills/: custom-codereview-guide.md
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: check-extensions.yml  check-readme.yml  check-workflow-sync.yml  (+14 more)
.plugin/: marketplace.json
automations/: README.md  catalog.json  index.d.ts  index.js
integrations/: README.md  catalog-index.js  catalog.schema.json  index.d.ts  index.js  integration-catalog-source.mjs  integration-catalog.json  oauth-provider-catalog-source.mjs  oauth-provider-registration-defaults.js
marketplaces/: default.json  extensions.json  large-codebase.json  openhands-extensions.json  openhands-verification-stack.json
mcps/: README.md  catalog.json  index.d.ts  index.js  logos.d.ts  logos.js
plugins/: README.md
scripts/: build-integration-catalog.mjs  build-skills-catalog.mjs  check_deprecations.py  sync_claude_commands.py  sync_extensions.py  sync_openhands_sdk_skill.py
skills/: README.md  github.md  index.d.ts  index.js  jupyter.md  write-behavior-test.md
tests/: test_add_skill_installs_to_agents_dir.py  test_babysit_pr_watch.py  test_buddy_skill.py  test_catalog_schema.py  test_catalogs.py  test_claude_code_compatibility.py  test_claude_commands_sync.py  test_code_review_risk_evaluation.py  test_debug_github_ci_agent_script.py  test_debug_jenkins_ci_helpers.py  test_deprecations.py  test_github_pr_review_skill.py  test_integration_catalog_in_sync.py  test_issue_duplicate_checker.py  test_live_integration_smoke.py  test_openhands_api_python.py  test_plugin_manifest.py  test_pr_review_agents_loading.py  test_pr_review_feedback.py  test_pr_review_prompt.py  test_pr_review_prompt_injection.py  test_pr_review_review_context.py  test_qa_changes.py  test_qa_changes_evaluation.py  test_release_notes_generator.py  test_sdk_loading.py  test_skill_plugin_loading.py  test_skills_catalog.py  test_slack_channel_monitor.py  test_sync_extensions.py  test_version_alignment.py  test_vulnerability_remediation_plugin.py  test_workflow_sync.py
(+848 files in other folders)
