[project]
name = "openhands-extensions"
version = "0.6.0"
description = "OpenHands extensions, plugins, and skills (Python bindings for the integration catalog)"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/openhands_extensions"]

[tool.hatch.build.targets.wheel.force-include]
"python/openhands_extensions/integration-catalog.json" = "openhands_extensions/integration-catalog.json"

[dependency-groups]
test = [
    "pytest>=8.0",
    "requests>=2.31",
    "openhands-sdk>=0.3",
]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
